--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
-            android:label="Get Plans" >
-        </activity>
+
         <activity
             android:name=".GetPlan"
             android:label="Call Log Data" >
         </activity>
-        <activity
-            android:name=".GetCallDetails"
-            android:label="Call Log Details" >
-        </activity>
+
         <activity
             android:name=".PhoneNumber"
             android:label="Recharge Bachat" >
@@ -43,11 +37,11 @@
         </activity>
         <activity
             android:name=".ScreenSlideActivity"
-            android:label="Plans For You" >
+            android:label="Best plans for you" >
         </activity>
         <activity
             android:name=".FetchCallTypeActivity"
-            android:label="@string/title_activity_fetch_call_type" >
+            android:label="Your call history" >
         </activity>
     </application>
 
